src/test/deca/syntax/valid/parser/debug-avec-objet.deca
// Description:
//    Programme avec objet
//
// Resultats:
//    a.x
//
// Historique:
//    cree le 10/01/2022
//    par Caroline

{

    public ;A(int y)
    {
        //Code
    }
}