src/test/deca/syntax/invalid/Lexer/symboles-inexistants.deca
// Description:
//    Programme avec caractères non reconnus
//
// Resultats:
//    token recognition error pour #
//
// Historique:
//    cree le 10/01/2022
//    par Caroline

{
class A {               # je met une erreur ici
    println("cette phrase ne sera pas reconnue");
}